--- a/client2.html
+++ b/client2.html
@@ -18,32 +18,11 @@
 </head>
 <body>
   <section>
-    <h1>Chat Client #2</h1>
+    <label>Name: </label>
+    <input type="text" id="name">
     <div id="messages"></div>
     <textarea rows="2" cols="35" id="chat"></textarea>
-    <script>
-      var $chat = $('#chat');
-      var client = new Faye.Client('/faye');
-      // $('#fire').on('click', null, function () { Send message with click
-      $(document).keypress(function (e) {
-        if (e.which == 13) {
-          var publication = client.publish('/channel', { text: 'Client 2: ' + $chat.val() });
-
-          publication.then(function () {
-            console.log('Message received by server!');
-          }, function (error) {
-            alert('There was a problem: ' + error.message);
-          });
-
-          $chat.val('');
-
-          return false;
-        }
-      });
-      client.subscribe('/channel', function (message) {
-        $('#messages').append('<p>' + message.text + '</p>');
-      });
-    </script>
+    <script src="client.js"></script>
   </section>
 </body>
 </html>
